# ha-nexus-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  auth.py  config.yaml  ha_client.py  pyproject.toml  repository.json  requirements.txt  run.sh  server.py  setup_ui.py
scripts/: add_lock_details.py  build_super_dashboard.py  fix_pullspring_text.py  fix_rolety_icons.py  inspect_rolety.py  simplify_lock.py  update_dashboard.py
tools/: areas.py  automations.py  blueprints.py  calendar.py  dashboards.py  devices.py  energy.py  entities.py  files.py  git_ops.py  hacs.py  helpers.py  history.py  labels.py  search.py  services.py  supervisor.py  system.py  todo.py  websocket.py  zones.py
