[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ha-super-mcp"
version = "0.1.0"
description = "Super MCP server for Home Assistant — full control via AI"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.40",
]

[project.scripts]
ha-super-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
