[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus"
version = "0.2.1"
description = "Nexus — MCP server for Home Assistant"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.40",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
nexus = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
